--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Juel Protfolio</title>
 </head>
 <body>
-   <section class="top-banner">
+   <section class="top-banner flexible-container">
     <div class="half-width">
       <h2 class="text-white">Hello</h2>
       <h1>
@@ -29,7 +29,7 @@
     </div>
    </section>
 
-   <section>
+   <section class="flexible-container">
     <div class="half-width">
       <img src="image/hero-person.jpg" alt="">
     </div>
@@ -39,6 +39,37 @@
       <a class="link" href="#">Hire me</a>
     </div>
    </section>
+
+   <section>
+      <div class="footer1">
+        <h2>Specializing In</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, rerum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, accusantium!</p>
+      </div>
+
+
+      <div class="parent">
+        <div class="child">
+          <h3>Fontend web developer</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt illo numquam veritatis maiores dignissimos!
+          </p>3
+        </div>
+        <div class="child">
+          <h3>Backend web developer</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt illo numquam veritatis maiores dignissimos!
+          </p>
+        </div>
+        <div class="child">
+          <h3>Fullstack web developer</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt illo numquam veritatis maiores dignissimos!
+          </p>
+        </div>
+      </div>
+
+   </section>
+
+   <footer>
+    copy write @ 2024 by Juel Rana
+   </footer>
 
 </body>
 </html>
